--- a/Capstone/ssumenu/build.gradle
+++ b/Capstone/ssumenu/build.gradle
@@ -2,4 +2,5 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.jsoup:jsoup:1.8.3'
 }
