--- a/Capstone/ssumenu/build.gradle
+++ b/Capstone/ssumenu/build.gradle
@@ -3,4 +3,5 @@ apply plugin: 'java'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.jsoup:jsoup:1.8.3'
+    compile 'com.google.code.gson:gson:2.3'
 }
