implement content provider&cursor

--- a/Capstone/app/src/main/AndroidManifest.xml
+++ b/Capstone/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             </intent-filter>
         </activity>
 
+        <provider
+            android:name=".MenusProvider"
+            android:authorities="zinc.capstone" />
+
     </application>
 
 </manifest>
