--- a/Capstone/app/src/main/AndroidManifest.xml
+++ b/Capstone/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
             android:name=".MenusProvider"
             android:authorities="zinc.capstone" />
 
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity" >
+        >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.zinc.capstone.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
