--- a/Capstone/app/src/main/AndroidManifest.xml
+++ b/Capstone/app/src/main/AndroidManifest.xml
@@ -43,6 +43,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.zinc.capstone.MainActivity" />
         </activity>
+        <activity
+            android:name=".InfoActivity"
+            android:label="@string/title_activity_info"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.zinc.capstone.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
