--- a/Capstone/app/build.gradle
+++ b/Capstone/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
